--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
  ci:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
     steps:
         - name: Checkout code
           uses: actions/checkout@v4
@@ -15,7 +18,7 @@ jobs:
         - name: Set up Node.js
           uses: actions/setup-node@v4
           with:
-                node-version: 20
+                node-version: $${{ matrix['node-version']}}
                 cache: 'npm'
 
         - name: Install dependencies
