--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         - name: Set up Node.js
           uses: actions/setup-node@v4
           with:
-                node-version: $${{ matrix['node-version']}}
+                node-version: ${{ matrix['node-version']}}
                 cache: 'npm'
 
         - name: Install dependencies
