--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,8 @@ on:
  pull_request:
     branches: [ main ]
 jobs:
- ci:
+ lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
     steps:
         - name: Checkout code
           uses: actions/checkout@v4
@@ -18,7 +15,7 @@ jobs:
         - name: Set up Node.js
           uses: actions/setup-node@v4
           with:
-                node-version: ${{ matrix['node-version']}}
+                node-version: 20
                 cache: 'npm'
 
         - name: Install dependencies
@@ -26,6 +23,21 @@ jobs:
 
         - name: Lint
           run: npm run lint
+
+ test:
+    runs-on: ubuntu-latest
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        - name: Set up Node.js
+          uses: actions/setup-node@v4
+          with:
+                node-version: 20
+                cache: 'npm'
+
+        - name: Install dependencies
+          run: npm ci
 
         - name: Run tests
           run: npm run test
